--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,23 +6,21 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.3
   # Define the jobs we want to run for this project
 jobs:
+
+ create_infrastructure: 
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: Create Cloudformation Stack
+            command: |
+              aws cloudformation deploy \
+                --template-file template.yml \
+                --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+                --region us-west-2
   
-  configure_infrastructure: 
-    docker:
-      - image: python:3.7-alpine3.11
-    steps:
-      - checkout
-      - add_ssh_keys:
-            # You can get this ID in the section where you registered the SSH Key
-          fingerprints: ["b4:32:8e:4d:69:a5:ad:ca:5a:8d:02:c1:f7:9b:5a:e9"] 
-      - run:
-          name: Install Ansible
-          command: |
-            apk add --update ansible
-      - run:
-          name: Run Playbook and Configure server
-          command: |
-            ansible-playbook -i inventory.txt main.yml
+ 
 workflows:
   myWorkflow:
     jobs:
