--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -7,7 +7,7 @@
   
 - name: "install index page"
   copy:
-    src: /home/yusuf/new/roles/apache/file/index.html
+    src: file/index.html
     dest: /var/www/html/index.html
     backup: yes
 - name: "service start"
