--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,26 +6,28 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.3
   # Define the jobs we want to run for this project
 jobs:
-  configure_infrastructure: 
+  smoke_test:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: alpine:latest
     steps:
-      - checkout
-      - add_ssh_keys:
-            # You can get this ID in the section where you registered the SSH Key
-          fingerprints: ["b4:32:8e:4d:69:a5:ad:ca:5a:8d:02:c1:f7:9b:5a:e9"] 
+      - run: apk add --update curl
       - run:
-          name: Install Ansible
-          command: |
-            apk add --update ansible
-      - run:
-          name: Run Playbook and Configure server
-          command: |
-            ansible-playbook -i inventory.txt main.yml
+         name: smoke test
+         command: |
+         URL="https://blog.udacity.com/"
+         # Test if website exists
+         if curl -s --head ${URL} 
+         then
+           return 0
+         else
+           return 1
+         fi
+ 
 
 
  
 workflows:
   myWorkflow:
     jobs:
-      -  configure_infrastructure
+      #-  configure_infrastructure
+      - smoke_test
