--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,30 @@ orbs:
   # welcome: circleci/welcome-orb@0.4.1
   aws-cli: circleci/aws-cli@2.0.3
   # Define the jobs we want to run for this project
+
+commands:
+   destroy_environment:
+     steps:
+       - run:
+           name: Destroy environment
+           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+           when: on_fail
+           command: |
+             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
+  create_infrastructure: 
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+        name: Create Cloudformation Stack
+        command: |
+         aws cloudformation deploy \
+           --template-file template.yml \
+           --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
+           --region us-east-1
   smoke_test:
     docker:
       - image: alpine:latest
@@ -14,7 +37,7 @@ jobs:
       - run:
          name: smoke test
          command: |
-          URL="https://blog.udacity.com/"
+          URL="https://blog.udacityy.com/"
            # Test if website exists
           if curl -s --head ${URL} 
           then
@@ -22,7 +45,8 @@ jobs:
           else
           return 1
           fi
- 
+      - destroy_environment 
+        when: on_fail
 
 
  
