--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,12 @@ jobs:
           fi
       - destroy_environment 
         when: on_fail
+        
 
 
  
 workflows:
   myWorkflow:
     jobs:
-      #-  configure_infrastructure
+      - configure_infrastructure
       - smoke_test
