--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,4 +57,5 @@ workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
-      - smoke_test
+      - smoke_test:
+          requires: [create_infrastructure]
