--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,19 +33,12 @@ jobs:
 
   smoke_test:
     docker:
-      - image: amazon/aws-cli
+      - image: alpine:latest
     steps:
       - run:
-         name: smoke test
-         command: |
-          URL="https://blog.udacityy.com/"
-           # Test if website exists
-          if curl -s --head ${URL} 
-          then
-          return 0
-          else
-          return 1
-          fi
+          name: Test job
+       # Fail the job intentionally to simulate an error.
+          command:  return 1
       - destroy_environment 
         
         
