--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,40 +6,55 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.3
   # Define the jobs we want to run for this project
 
-commands:
-   destroy_environment:
-     steps:
-       - run:
-           name: Destroy environment
+#commands:
+   #destroy_environment:
+     #steps:
+       #- run:
+           #name: Destroy environment
            # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
            # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
-           when: on_fail
-           command: |
-            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+           #when: on_fail
+           #command: |
+            #aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
-  create_infrastructure: 
+  #create_infrastructure: 
+    #docker:
+     # - image: amazon/aws-cli
+    #steps:
+      #- checkout
+      #- run:
+          #name: Create Cloudformation Stack
+          #command: |
+          # aws cloudformation deploy \
+          # --template-file template.yml \
+           #--stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
+          # --region us-west-2
+
+  create_and_deploy_front_end:
     docker:
-      - image: amazon/aws-cli
+    - image: amazon/aws-cli
     steps:
       - checkout
       - run:
-          name: Create Cloudformation Stack
-          command: |
-           aws cloudformation deploy \
-           --template-file template.yml \
-           --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
-           --region us-west-2
+        name: Execute bucket.yml - Create Cloudformation Stack
+        command: |
+         aws cloudformation deploy \
+         --template-file bucket.yml \
+         --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
+         --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
+ # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
+      - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
 
-  smoke_test:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - run:
-          name: Test job
+  #smoke_test:
+    #docker:
+      #- image: amazon/aws-cli
+    #steps:
+      #- run:
+          #name: Test job
        # Fail the job intentionally to simulate an error.
-          command:  return 1
-      - destroy_environment 
+          #command:  return 1
+      #- destroy_environment 
         
         
 
@@ -48,6 +63,7 @@ jobs:
 workflows:
   myWorkflow:
     jobs:
-      - create_infrastructure
-      - smoke_test:
-          requires: [create_infrastructure]
+      #- create_infrastructure
+      - create_and_deploy_front_end
+      #- smoke_test:
+         # requires: [create_infrastructure]
