--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Execute bucket.yml - Create Cloudformation Stack
+          name: Create Cloudformation Stack
           command: |
             aws cloudformation deploy \
             --template-file bucket.yml \
